--- a/css/home.scss
+++ b/css/home.scss
@@ -77,12 +77,12 @@ $accent: #56362c;
         flex-direction: column;
     }
 }
-.section1 {
+.about {
     .row {
         justify-content: center;
         align-items: center;
         img {
-            width: 30vw;
+            width: 25vw;
             margin-right: 5vw;
         }
         .column {
@@ -96,7 +96,7 @@ $accent: #56362c;
         }
     }
 }
-.section2 {
+.gallery {
     padding: 0 6vw;
     ul {
         display: flex;
@@ -127,7 +127,7 @@ $accent: #56362c;
         }
     }
 }
-.section3 {
+.instagram {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -139,6 +139,10 @@ $accent: #56362c;
         flex-direction: row;
         align-items: center;
         justify-content: center;
+        img {
+            height: 5vw;
+            padding-right: 1.5vw;
+        }
         a {
             font-size: 20px;
             margin: 0 0 0 3vw;
