--- a/css/styles.scss
+++ b/css/styles.scss
@@ -26,6 +26,10 @@ body {
     overflow-x: hidden;
     overflow-y: auto;
 }
+::selection {
+    background: $black;
+    color: $white;
+}
 .sans {
     font-family: acumin-pro, sans-serif;
     font-weight: 400;
@@ -183,7 +187,7 @@ body {
 footer {
     width: 100%;
     box-sizing: border-box;
-    padding: 5px 8px;
+    padding: 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
