--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ body {
   width: 100%;
   top: 0;
   left: 0;
-  background: rgba(255, 248, 244, 0.5);
+  background: #fff8f4;
   opacity: 0;
   -webkit-backdrop-filter: blur(15px);
           backdrop-filter: blur(15px);
