--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ html {
   overflow: hidden;
   background: #fff8f4;
   font-size: 20px;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -268,6 +269,11 @@ body {
   top: -2px;
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
+}
+
+.anchor {
+  position: relative;
+  top: -160px;
 }
 
 footer {
