--- a/css/home.css
+++ b/css/home.css
@@ -12,7 +12,7 @@
 }
 
 .hero h1 {
-  font-size: 7em;
+  font-size: 7vw;
   text-align: center;
   line-height: 1.15;
   width: 60%;
@@ -41,6 +41,50 @@
   height: 30vh;
   top: 77vh;
   left: 20vw;
+}
+
+.hero .rotate {
+  position: absolute;
+  -webkit-animation: rotate 10s linear infinite;
+          animation: rotate 10s linear infinite;
+  height: 7vw;
+  width: 7vw;
+  z-index: 2;
+  top: 75vh;
+}
+
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.hero .rotatingcircle {
+  height: 100%;
+  width: 100%;
+  -webkit-transition-duration: .4s;
+          transition-duration: .4s;
+}
+
+.hero .rotatingcircle:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 #banner {
@@ -155,6 +199,12 @@
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   grid-gap: 5vw;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .gallery ul li {
@@ -178,7 +228,7 @@
 
 .gallery ul li img {
   width: 100%;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .gallery ul li p {
