--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,28 @@ body {
           box-shadow: 0px 5px 0px #56362c;
 }
 
+img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+img::after {
+  background: #56362c;
+  width: 100%;
+  height: 100%;
+}
+
 #loader {
   position: fixed;
   top: 0;
