--- a/css/styles.scss
+++ b/css/styles.scss
@@ -54,6 +54,16 @@ body {
         box-shadow: 0px 5px 0px $accent;
     }
 }
+img {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    &::after {
+        background: $accent;
+        width: 100%; height: 100%;
+    }
+}
 #loader {
     position: fixed;
     top: 0;
